# dhvaniguard

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
benchmark/: run_benchmark.py
src/dhvaniguard/: __init__.py  guard.py
tests/: test_guard.py
training/: eval_model.py  eval_multilang.py  generate_data.py  train.jsonl  train_model.py  train_synthetic.jsonl
validation/: analyze.py  attacks.jsonl  classifier_test.py  eval_multilang.jsonl  results_classifier.jsonl
